--- a/base_static/global/css/styles.css
+++ b/base_static/global/css/styles.css
@@ -572,13 +572,16 @@ h5 {
 
 
                     /* Página de escolha de cadastro*/
+.register-custom-user {
+    height: 100%;
+    width: 100%;
+    margin-top: 10rem;
+}
 .access-register-page {
     max-width: 84rem;   
-    height: 15rem;
     margin: 0 auto;
     display: flex;
     justify-content: space-between;
-    margin-top: 8rem;
 }
 .btn-access {
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.15);
@@ -675,10 +678,7 @@ h5 {
     height: 4rem;
 }
 
-.form-button-group {
-    display: inline-block;
-    margin-top: 0; 
-}
+
 
 .btn-register {
     display: inline-block;
@@ -1063,20 +1063,47 @@ h5 {
 
                 /**********************RESPONSIVIDADE 949px*****************/
 @media(min-width: 601px) and (max-width: 949px) {
+     /*listas*/
     .report-list-container {
         grid-template-columns: repeat(2, 1fr);
     }
+    /*Main*/  
     .container {
         max-width: 50rem;
     }
     .main-content {
         padding-bottom: 3rem;
     }
+    /*Home*/
     .home-image-container{
         display: flex;
         max-width: 50rem;
         margin: 0 auto;
         align-content: flex-start;
+    }
+    /*Header*/  
+    .main-header {
+        display: flex;
+        justify-content: space-between;
+    }
+    .header-responsive-949 {
+        max-width: 55rem;
+        margin: 0 auto;
+    }
+
+    /*Cadastro de tipo de usuário*/
+    .access-register-page {
+        flex-direction: column;
+        align-items: center;
+    }
+    .register-custom-user {
+        margin-top: 7rem;
+    }
+    .form-button-group {
+        margin-bottom: 2rem;
+    }
+    .form-button-group {
+        margin-bottom: 4rem;
     }
 }
 
@@ -1167,6 +1194,18 @@ h5 {
     .image-logo-login {
         margin-top: 2rem;
         transform: scale(1.1);
+    }
+    /*Cadastro de tipo de usuário*/
+    .access-register-page {
+        flex-direction: column;
+        align-items: center;
+        margin-top: 2rem;
+    }
+    .register-custom-user {
+        margin-top: 5rem;
+    }
+    .form-button-group {
+        margin-bottom: 2rem;
     }
     
 }
