--- a/base_templates/global/partials/header.html
+++ b/base_templates/global/partials/header.html
@@ -1,5 +1,5 @@
 <header class="main-header-container">
-    <div class="main-header container">
+    <div class="main-header container header-responsive-949">
        
         <div class="imagem-logo-container">
             <img src="/media/lab/logo/ah-logo.png" alt="Logo" class="image-logo">
