--- a/base_templates/global/partials/search_report.html
+++ b/base_templates/global/partials/search_report.html
@@ -17,7 +17,9 @@
                 <label for="search_date">Data:</label>
                 <input type="date" id="search_date" name="search_date">               
             </form> 
-            <button type="button" class="search-button" id="combined-search-button">
+        </div>
+        <div class="search-button-report">
+            <button type="button" class="" id="combined-search-button">
                 <i class="fas fa-search"></i> Pesquisar
             </button>
         </div>
