Solving user card no space

--- a/lab/templates/lab/partials/report_searched.html
+++ b/lab/templates/lab/partials/report_searched.html
@@ -1,7 +1,7 @@
 <div class="report report-list-search">
     <div class="report-content">
         <div class="report-text-info">
-            <p> <strong> CPF do paciente: </strong></p> {{ report.cpf }}  
+            <p> <strong> CPF do paciente: </strong></p> {{ report.cpf }} bn
             <p> <strong> nome do paciente: </strong></p> {{ report.name }} 
             <p><strong>Data do Envio:</strong> </p> {{ report.created_at }}
         </div>
