--- a/lab/templates/lab/partials/user.html
+++ b/lab/templates/lab/partials/user.html
@@ -2,10 +2,12 @@
     <div class="user-profile-details">
         <div class="patient-content">    
             <p><strong> Nome: </strong> {{ patient.first_name }} {{ patient.last_name }}</p>
+            <br>
             <p><strong> CPF: </strong> {{ patient.cpf }}</p>
+            <br>
             <p><strong> Nascimento: </strong>{{ patient.birthday }} </p>
-            <p><strong> ID: </strong> {{ patient.id }}</p>
-            <div class="button-access-user-space">
+            <br>
+            <p><strong> ID: </strong> {{ patient.id }}</p>            <div class="button-access-user-space">
                 <a href="{% url 'lab:usuario_detalhes' usuario_id=patient.id %}" class="btn-access">
                     <i class="fas fa-user"></i>‎ ‎ ‎‎‎‎
                     Visualizar perfil
