--- a/base_static/global/css/styles.css
+++ b/base_static/global/css/styles.css
@@ -1055,7 +1055,7 @@ h5 {
 
                     /**********************RESPONSIVIDADE 1200px*****************/
 /*Home*/
-@media(min-width: 950px) and (max-width: 1250px) {
+@media(min-width: 950px) and (max-width: 1300px) {
     .report-list-container {
         grid-template-columns: repeat(3, 1fr);
     }
@@ -1065,7 +1065,24 @@ h5 {
     .main-content {
         padding-bottom: 3rem;
     }
+    /*Laudo detalhe e hemograma*/
+    .before_aft_detect {
+        flex-direction: column;
+    }
+    .blue-arrow {
+        margin: 0 auto;
+        transform: rotate(90deg);
+    }
 
+    .report-image-box {
+        margin: 0 auto;
+        margin-top: 2.5rem;
+        margin-bottom: 2.5rem;
+        max-width: 100%;
+        max-height: 100%;
+    }
+
+    
 }
 
 
@@ -1113,6 +1130,25 @@ h5 {
     }
     .form-button-group {
         margin-bottom: 4rem;
+    }
+
+    /*Laudo detalhe e hemograma*/
+    .report-description-container {
+        max-width: 58rem;
+    }
+    .before_aft_detect {
+        flex-direction: column;
+    }
+    .blue-arrow {
+        margin: 0 auto;
+        transform: rotate(90deg);
+    }
+    .report-image-box {
+        margin: 0 auto;
+        margin-top: 2.5rem;
+        margin-bottom: 2.5rem;
+        max-width: 100%;
+        max-height: 100%;
     }
 }
 
@@ -1232,10 +1268,33 @@ h5 {
         margin-top: 3rem;
     }
 
-     /*Footer*/
+    /*Laudo detalhe e hemograma*/
+    .report-description-container {
+        max-width: 50rem;
+        margin: 0 auto;
+    }
+    .before_aft_detect {
+        flex-direction: column;
+        margin:auto 4rem;
+    }
+    .blue-arrow {
+        margin: 0 auto;
+        transform: rotate(90deg);
+    }
+    .report-image-box {
+        margin: 0 auto;
+        margin-top: 2.5rem;
+        margin-bottom: 2.5rem;
+        max-width: 100%;
+        max-height: 100%;
+    }
+
+    /*Footer*/
      .main-footer {
         font-size: 1.4rem;
-     }
+    }
+
+    
 }
 
             /**********************RESPONSIVIDADE 289px *****************/
