--- a/lab/templates/lab/partials/user.html
+++ b/lab/templates/lab/partials/user.html
@@ -1,13 +1,16 @@
 <div class="recipe recipe-list-item">
     <div class="user-profile-details">
-        <div class="patient-content">    
-            <p><strong> Nome: </strong> {{ patient.first_name }} {{ patient.last_name }}</p>
-            <br>
-            <p><strong> CPF: </strong> {{ patient.cpf }}</p>
-            <br>
-            <p><strong> Nascimento: </strong>{{ patient.birthday }} </p>
-            <br>
-            <p><strong> ID: </strong> {{ patient.id }}</p>            <div class="button-access-user-space">
+        <div class="patient-content">
+            <div class="patient-content-paragrah">   
+                <p><strong> Nome: </strong> {{ patient.first_name }} {{ patient.last_name }}</p>
+                <br>
+                <p><strong> CPF: </strong> {{ patient.cpf }}</p>
+                <br>
+                <p><strong> Nascimento: </strong>{{ patient.birthday }} </p>
+                <br>
+                <p><strong> ID: </strong> {{ patient.id }}</p>        
+            </div> 
+            <div class="button-access-user-space">
                 <a href="{% url 'lab:usuario_detalhes' usuario_id=patient.id %}" class="btn-access">
                     <i class="fas fa-user"></i>‎ ‎ ‎‎‎‎
                     Visualizar perfil
