--- a/base_static/global/css/styles.css
+++ b/base_static/global/css/styles.css
@@ -1245,6 +1245,7 @@ h5 {
         margin-top: 2rem;
         transform: scale(1.1);
     }
+
     /*Cadastro de tipo de usuário*/
     .access-register-page {
         flex-direction: column;
@@ -1358,6 +1359,19 @@ h5 {
     }
     .search-button-report {
         margin-top: 3rem;
+    }
+    
+     /*Cadastro de tipo de usuário*/
+     .access-register-page {
+        flex-direction: column;
+        align-items: center;
+        margin-top: 2rem;
+    }
+    .register-custom-user {
+        margin-top: 5rem;
+    }
+    .form-button-group {
+        margin-bottom: 2rem;
     }
 
     /*Laudo detalhe e hemograma*/
