--- a/lab/templates/lab/partials/report_profile.html
+++ b/lab/templates/lab/partials/report_profile.html
@@ -1,8 +1,12 @@
 <div class="report report-list-item">
     <div class="report-content">    
-        <p><strong>Data de Envio:</strong> {{ laudo.created_at }}</p>
-        <a href= {% url "lab:laudo_detalhes" laudo_id=laudo.id %} class="report-user-access">
-            Detalhes <i class='bx bxs-binoculars'></i>
-        </a>
+        <div class="report-text-info">
+            <p><strong>Data de Envio:</strong> {{ laudo.created_at }}</p>
+        </div>
+        <div class="report-user-access-container">
+            <a href= {% url "lab:laudo_detalhes" laudo_id=laudo.id %} class="report-user-access-btn">
+                Detalhes <i class='bx bxs-binoculars'></i>
+            </a>
+        </div>
     </div>
 </div>
