Eliminating exaggerated space main content class

--- a/authors/templates/authors/pages/register_view_tec.html
+++ b/authors/templates/authors/pages/register_view_tec.html
@@ -4,10 +4,9 @@
 
 {% block content %}
 
-  <div class="main-content center container">
-    <h2>Registrar usuário técnico</h2>
+  <div class="main-content container">
+    <h2 class="personal-heading">Registrar usuário técnico</h2>
+    {% include 'global/partials/form.html' %}
   </div>
-
-  {% include 'global/partials/form.html' %}
 
 {% endblock content %}
