--- a/lab/templates/lab/pages/laudo_perfil.html
+++ b/lab/templates/lab/pages/laudo_perfil.html
@@ -11,7 +11,7 @@
                 </span> 
             </h1>
             
-        <div class="report-container">
+        <div class="report-list-container">
                 {% for laudo in laudos %}
                     {% include 'lab/partials/report_profile.html' %}
                 {% endfor %}
