--- a/authors/templates/authors/pages/register_view_patient.html
+++ b/authors/templates/authors/pages/register_view_patient.html
@@ -4,11 +4,10 @@
 
 {% block content %}
 
-  <div class="main-content center container">
-    <h2>Registrar usuário paciente</h2>
-  </div>  
-
-  {% include 'global/partials/form.html' %}
+  <div class="main-content container">
+    <h2 class="personal-heading">Registrar usuário paciente</h2>
+    {% include 'global/partials/form.html' %}
+  </div>
   
 {% endblock content %}
 
