--- a/authors/templates/authors/pages/register_view_recpt.html
+++ b/authors/templates/authors/pages/register_view_recpt.html
@@ -4,11 +4,10 @@
 
 {% block content %}
 
-  <div class="main-content center container">
-    <h2>Registrar usuário de recepcão</h2>
+  <div class="main-content container">
+    <h2 class="personal-heading">Registrar usuário de recepcão</h2>
+    {% include 'global/partials/form.html' %}
   </div>
-
-  {% include 'global/partials/form.html' %}
 
 {% endblock content %}
 
