--- a/base_templates/global/partials/search.html
+++ b/base_templates/global/partials/search.html
@@ -1,6 +1,6 @@
 <div class="search-container">
     <div class="container">
-        <form action="{% url 'lab:pesquisa' %}" method="GET" class="search-form">
+        <form action="{% url 'lab:search_patient' %}" method="GET" class="search-form">
             <input 
                 type="search" class="search-input" 
                 name="q" value="{{ search_term }}" required 
