--- a/base_templates/global/partials/search_envio.html
+++ b/base_templates/global/partials/search_envio.html
@@ -1,6 +1,6 @@
 <div class="search-container">
     <div class="container">
-        <form action="{% url 'lab:imagem_enviar' %}" method="GET" enctype="multipart/form-data" class="search-form">
+        <form action="{% url 'lab:send_img' %}" method="GET" enctype="multipart/form-data" class="search-form">
             {% csrf_token %}
             <input 
                 type="search" class="search-input" 
