--- a/lab/templates/lab/partials/report_profile_partial.html
+++ b/lab/templates/lab/partials/report_profile_partial.html
@@ -1,10 +1,10 @@
 <div class="report report-list-item">
     <div class="report-content">    
         <div class="report-text-info">
-            <p><strong>Data de Envio:</strong> {{ laudo.created_at }}</p>
+            <p><strong>Data de Envio:</strong> {{ report.created_at }}</p>
         </div>
         <div class="report-user-access-container">
-            <a href= {% url "lab:report_detail" laudo_id=laudo.id %} class="report-user-access-btn">
+            <a href= {% url "lab:report_detail" report_id=report.id %} class="report-user-access-btn">
                 Detalhes <i class='bx bxs-binoculars'></i>
             </a>
         </div>
