--- a/base_templates/global/partials/pagination.html
+++ b/base_templates/global/partials/pagination.html
@@ -1,61 +1,65 @@
-{% if has_search_results and patients %}
-  {% if pagination_range and pagination_range.total_pages > 1 %}
-    <div class="container pagination">
-      <div class="pagination-content">
-        {% if pagination_range.first_page_out_of_range %}
-          <a class="page-link page-item" href="?page=1{{ additional_url_query }}">1</a>
-          <span class="page-item">...</span>
-        {% endif %}
-
-        {% for page in pagination_range.pagination %}
-          {% if pagination_range.current_page == page %}
-              <a class="page-link page-item page-current" href="?page={{ page }}{{ additional_url_query }}">
-                {{ page }}
-              </a>
-          {% else %}
-              <a class="page-link page-item" href="?page={{ page }}{{ additional_url_query }}">
-                {{ page }}
-              </a>
+{% if has_search_results %}
+  {% if patients %}
+    {% if pagination_range and pagination_range.total_pages > 1 %}
+      <div class="container pagination">
+        <div class="pagination-content">
+          {% if pagination_range.first_page_out_of_range %}
+            <a class="page-link page-item" href="?page=1{{ additional_url_query }}">1</a>
+            <span class="page-item">...</span>
           {% endif %}
-        {% endfor %}
-        
-        {% if pagination_range.last_page_out_of_range %}
-          <span class="page-item">...</span>
-          <a class="page-link page-item" href="?page={{ pagination_range.total_pages }}{{ additional_url_query }}">
-              {{ pagination_range.total_pages }}
-          </a>
-        {% endif %}    
+
+          {% for page in pagination_range.pagination %}
+            {% if pagination_range.current_page == page %}
+                <a class="page-link page-item page-current" href="?page={{ page }}{{ additional_url_query }}">
+                  {{ page }}
+                </a>
+            {% else %}
+                <a class="page-link page-item" href="?page={{ page }}{{ additional_url_query }}">
+                  {{ page }}
+                </a>
+            {% endif %}
+          {% endfor %}
+          
+          {% if pagination_range.last_page_out_of_range %}
+            <span class="page-item">...</span>
+            <a class="page-link page-item" href="?page={{ pagination_range.total_pages }}{{ additional_url_query }}">
+                {{ pagination_range.total_pages }}
+            </a>
+          {% endif %}    
+        </div>
       </div>
-    </div>
+    {% endif %}
   {% endif %}
 {% else %}
-  {% if pagination_range_all and pagination_range_all.total_pages > 1 %}
-    <div class="container pagination">
-      <div class="pagination-content">
-        {% if pagination_range_all.first_page_out_of_range %}
-          <a class="page-link page-item" href="?page=1{{ additional_url_query }}">1</a>
-          <span class="page-item">...</span>
-        {% endif %}
-
-        {% for page in pagination_range_all.pagination %}
-          {% if pagination_range_all.current_page == page %}
-              <a class="page-link page-item page-current" href="?page={{ page }}{{ additional_url_query }}">
-                {{ page }}
-              </a>
-          {% else %}
-              <a class="page-link page-item" href="?page={{ page }}{{ additional_url_query }}">
-                {{ page }}
-              </a>
+  {% if not search_term %}
+    {% if pagination_range_all and pagination_range_all.total_pages > 1 %}
+      <div class="container pagination">
+        <div class="pagination-content">
+          {% if pagination_range_all.first_page_out_of_range %}
+            <a class="page-link page-item" href="?page=1{{ additional_url_query }}">1</a>
+            <span class="page-item">...</span>
           {% endif %}
-        {% endfor %}
-        
-        {% if pagination_range_all.last_page_out_of_range %}
-          <span class="page-item">...</span>
-          <a class="page-link page-item" href="?page={{ pagination_range_all.total_pages }}{{ additional_url_query }}">
-              {{ pagination_range_all.total_pages }}
-          </a>
-        {% endif %}    
+
+          {% for page in pagination_range_all.pagination %}
+            {% if pagination_range_all.current_page == page %}
+                <a class="page-link page-item page-current" href="?page={{ page }}{{ additional_url_query }}">
+                  {{ page }}
+                </a>
+            {% else %}
+                <a class="page-link page-item" href="?page={{ page }}{{ additional_url_query }}">
+                  {{ page }}
+                </a>
+            {% endif %}
+          {% endfor %}
+          
+          {% if pagination_range_all.last_page_out_of_range %}
+            <span class="page-item">...</span>
+            <a class="page-link page-item" href="?page={{ pagination_range_all.total_pages }}{{ additional_url_query }}">
+                {{ pagination_range_all.total_pages }}
+            </a>
+          {% endif %}    
+        </div>
       </div>
-    </div>
+    {% endif %}
   {% endif %}
 {% endif %}
