--- a/base_templates/global/partials/search_report.html
+++ b/base_templates/global/partials/search_report.html
@@ -3,8 +3,11 @@
     <div class="search-fst-box-report">
         <form action="{% url 'lab:report_search' %}" method="GET" class="search-form">
             <input 
-                type="search" class="search-input" 
-                name="q" value="{{ search_term }}"  
+                type="search" 
+                class="search-input" 
+                id="search-box"
+                name="q" 
+                value="{{ search_term }}"  
                 placeholder="Digite o nome ou CPF para filtrar a busca"
             >
             
@@ -15,11 +18,14 @@
         <div class="date-box">
             <form action="{% url 'lab:report_search' %}" method="GET" class="date-search-form">
                 <label for="search_date">Data:</label>
-                <input type="date" id="search_date" name="search_date">               
+                <input 
+                    type="date" 
+                    id="search_date" 
+                    name="search_date">               
             </form> 
         </div>
         <div class="search-button-report">
-            <button type="button" class="" id="combined-search-button">
+            <button type="submit" class="" id="combined-search-button">
                 <i class="fas fa-search"></i> Pesquisar
             </button>
         </div>
