Try to display image before submit form

--- a/lab/templates/lab/partials/form_send_micro_pic_partial.html
+++ b/lab/templates/lab/partials/form_send_micro_pic_partial.html
@@ -36,6 +36,9 @@
 
             {{ field.errors }}
           </div>
+          {% if field.name == 'image' and field.value.url %}
+              <img src="{{ field.value.url }}" alt="image">
+          {% endif %}
         {% endfor %}
       </div>
 
