--- a/base_templates/global/partials/form.html
+++ b/base_templates/global/partials/form.html
@@ -17,6 +17,11 @@
 
           {{ field.errors }}
         </div>
+        {% if field.name == 'image' or field.value.url %}
+          <div class="span-2">
+            <img src="{{ field.value.url }}" alt="Capa para {{ recipe.title }}">
+          </div>
+        {% endif %}
       {% endfor %}
     </div>
 
