--- a/base_static/global/css/styles.css
+++ b/base_static/global/css/styles.css
@@ -605,7 +605,8 @@ h5 {
     justify-content: center;
     align-items: center;
     margin: 0 auto;
-    margin-bottom: 5rem;
+    margin-top: 1.5rem;
+    margin-bottom: 1.5rem;
 }
 .pagination .page-item {
     background-color: var(--color-gray-3);
